feat: Добавить разметку для секции lots

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,18 +7,26 @@
   display: flex;
   justify-content: space-between;
   padding: 92px 51px;
+  align-items: center;
 }
 
 .header__links-list {
   display: flex;
   column-gap: 32px;
   list-style: circle;
+  align-items: baseline;
 }
 
 .header__links-list_type_adress {
   flex-direction: column;
   list-style: none;
 }
+
+.header__links-list-item {
+  font-size: 18px;
+  line-height: 135%;
+}
+
 
 .header__links-list-item_no-bullit {
   list-style: none;
@@ -28,7 +36,6 @@
   border-bottom: 1px solid #000;
   padding-bottom: 2px;
   font-weight: 400;
-  font-size: 18px;
   font-style: normal;
   line-height: normal;
   text-decoration: none;
@@ -44,12 +51,99 @@
 }
 
 .header__logo {
-  width: 148px;
-  
+  width: 138px;
+  max-height: 109px;
 }
 
 .address {
-  max-width: 386px;
+  max-width: 384px;
   padding-left: 146px;
   font-style: inherit;
+}
+
+.cover {
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  padding: 165px 50px 50px;
+  color: #FFF;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  row-gap: 135px;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  opacity: 0.6;
+  background: #000;
+}
+
+.cover__title {
+  z-index: 1;
+  width: 100%;
+  font-weight: 700;
+  font-size: 100px;
+  font-style: normal;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+  line-height: 100%;
+}
+
+.aligned-text_center {
+  padding: 20px 0;
+  text-align: center;
+
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  align-self: flex-end;
+  display: flex;
+  column-gap: 78px;
+  align-items: baseline;
+}
+
+.cover__description-text {
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  color: #FFF;
+  background-color: transparent;
+  border: 1px solid #FFF;
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 12px 32px;
 }
