--- a/styles/style.css
+++ b/styles/style.css
@@ -6,15 +6,15 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 92px 51px;
   align-items: center;
+  padding: 92px 51px;
 }
 
 .header__links-list {
   display: flex;
+  align-items: baseline;
   column-gap: 32px;
   list-style: circle;
-  align-items: baseline;
 }
 
 .header__links-list_type_adress {
@@ -64,6 +64,9 @@
 .cover {
   position: relative;
   z-index: 0;
+  display: flex;
+  flex-direction: column;
+  row-gap: 135px;
   width: 100%;
   padding: 165px 50px 50px;
   color: #FFF;
@@ -71,9 +74,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  row-gap: 135px;
 }
 
 .overlay {
@@ -119,31 +119,117 @@
 }
 
 .cover__description {
-  align-self: flex-end;
   display: flex;
-  column-gap: 78px;
   align-items: baseline;
+  column-gap: 78px;
+  align-self: flex-end;
 }
 
 .cover__description-text {
-  text-align: center;
+  font-weight: 400;
   font-size: 22px;
   font-style: normal;
-  font-weight: 400;
   line-height: 28px;
+  text-align: center;
   text-transform: uppercase;
   word-spacing: 18px;
 }
 
 .bet-button {
-  color: #FFF;
-  background-color: transparent;
   border: 1px solid #FFF;
-  text-align: center;
+  padding: 12px 32px;
+  color: #FFF;
+  font-weight: 400;
   font-size: 22px;
+  font-style: normal;
+  line-height: normal;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.lots {
+  padding: 180px 50px 180px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 27px;
+  align-items: flex-start;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-left: 40px;
+}
+
+.lots__card-list {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+  min-height: 450px;
+}
+
+.lots__card-list-item {
+  flex: 1 1 0;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+}
+
+.card {
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 50px 40px;
+  color: #FFF;
+  z-index: 0;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.lots__look-more-link {
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  text-transform: uppercase;
-  padding: 12px 32px;
+  text-decoration: none;
+  padding-bottom: 2px;
+  border-bottom: 1px solid #000;
+  margin-left: 40px;
 }
